[gd_scene load_steps=7 format=3 uid="uid://4hvo85rkcs5n"]

[ext_resource type="Script" path="res://Win Screen.gd" id="1_nuf5p"]
[ext_resource type="Texture2D" uid="uid://dbp6xw1k6j3o" path="res://Aaliyah/UI/Background/Dungeon Pic.jpeg" id="2_tt2p4"]
[ext_resource type="FontFile" uid="uid://bmtf3mpkawr66" path="res://Aaliyah/UI/Font/ConnectionII.otf" id="3_ie7iw"]

[sub_resource type="Animation" id="Animation_u2a6f"]
resource_name = "GM"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HBoxContainer:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(0.5, 1),
"update": 0,
"values": [Vector2(287.5, 660), Vector2(287.5, 300)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.5),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"enableButtons"
}]
}

[sub_resource type="Animation" id="Animation_8dp1s"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HBoxContainer:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(287.5, 660)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_nmoj1"]
_data = {
"GM": SubResource("Animation_u2a6f"),
"RESET": SubResource("Animation_8dp1s")
}

[node name="Game Over" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_nuf5p")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "GM"
libraries = {
"": SubResource("AnimationLibrary_nmoj1")
}

[node name="DungeonPic" type="Sprite2D" parent="."]
position = Vector2(578.5, 326)
scale = Vector2(1.13, 1.14)
texture = ExtResource("2_tt2p4")

[node name="Status" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -120.0
offset_top = 88.0
offset_right = 120.0
offset_bottom = 171.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("3_ie7iw")
theme_override_font_sizes/font_size = 80
text = "Game Over"

[node name="Flavor" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -461.0
offset_top = 192.0
offset_right = 461.0
offset_bottom = 278.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("3_ie7iw")
theme_override_font_sizes/font_size = 40
text = "You have been killed by a dangerous enemy"
autowrap_mode = 3

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 287.5
offset_top = 660.0
offset_right = 864.5
offset_bottom = 718.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 30

[node name="Retry" type="Button" parent="HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("3_ie7iw")
theme_override_font_sizes/font_size = 50
disabled = true
text = "Retry"

[node name="Main Menu" type="Button" parent="HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("3_ie7iw")
theme_override_font_sizes/font_size = 50
disabled = true
text = "Main Menu
"

[node name="Quit" type="Button" parent="HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_ie7iw")
theme_override_font_sizes/font_size = 50
disabled = true
text = "Quit"

[connection signal="pressed" from="HBoxContainer/Retry" to="." method="_on_retry_pressed"]
[connection signal="pressed" from="HBoxContainer/Main Menu" to="." method="_on_main_menu_pressed"]
[connection signal="pressed" from="HBoxContainer/Quit" to="." method="_on_quit_pressed"]
